# compiler-assignment

./: .gitignore  LICENSE  README.md
hw2/: Makefile  _tags  add_test.ml  gradedtests.ml  invalid_test.ml  kek.ml  main.ml  shift_test.ml  simulator.ml  sp15_tests.ml  sp17_tests.ml  sp18_tests.ml  sp20_tests.ml  studenttests.ml  sub_test.ml  team.txt  xor_test.ml
hw2/util/: assert.mli
hw3/: Makefile  README  backend.ml  cinterop.c  dbernhard.ml  driver.ml  dune  gradedtests.ml  haenniro.ml  main.ml  nicdard.ml  studenttests.ml  team.txt  zikai.ml
hw4/: .merlin  .ocamlinit  Makefile  README  ast.ml  astlib.ml  dbernhard.ml  driver.ml  dune  frontend.ml  gradedtests.ml  lexer.mll  main.ml  nicdard.ml  parser.mly  progasts.ml  runtime.c  smithj.ml  studenttests.ml  team.txt  thbwd.ml
hw5/: .merlin  Makefile  ast.ml  astlib.ml  dbernhard.ml  driver.ml  dune  frontend.ml  gradedtests.ml  main.ml  nicdard.ml  parser.mly  thbwd.ml  typechecker.ml
hw6/: .ocamlinit  Makefile  README  alias.ml  analysistests.ml  backend.ml  cfg.ml  constprop.ml  dce.ml  driver.ml  dune  frontend-break.ml  frontend.ml  gradedtests.ml  liveness.ml  main.ml  opt.ml  registers.ml  runtime.c  solver.ml  tctxt.ml  typechecker.ml
hw6/hw5programs/: leqiliu_traversal.oat  maale_odd_even.oat
hw6/ll/: ll-original.ml
hw6/oatprograms/: arrayargs2.oat  bsort.oat  bubble_sort.oat  conquest.oat  count_sort.oat  easy_p3.oat  lcs.oat  msort2.oat  no_of_fac.oat  run14.oat  run15.oat  run16.oat  run17.oat  run25.oat  run44.oat  sieve.oat  toascii.oat  xor_shift.oat
hw6/util/: assert.mli  platform.ml
(+34 files in other folders)
